# verda-assets

./: CHANGELOG.md  LICENSE  verda-assets.cabal
lib/Verda/: Asset.hs
lib/Verda/Asset/: File.hs  Internal.hs  Loader.hs  Meta.hs  Types.hs
lib/Verda/Asset/Internal/: Impl.hs
test/Verda/Asset/: FileSpec.hs  InternalSpec.hs  MetaSpec.hs  TestUtils.hs
